--- a/Task5/config/configuration.json
+++ b/Task5/config/configuration.json
@@ -6,7 +6,7 @@
 	  "load": 1
 	},
 	"Response_onInvalidJson": {
-	  "infoid": "ER101",
+	  "infoID": "ER101",
 	  "infomsg": "Invalid JSON format",
 	  "svcName": "Base",
 	  "svcGroup": "Config",
@@ -14,13 +14,14 @@
 	},
 	"Response_onPostProcessRequest": {
 	  "infoid": "ER102",
-	  "infomsg": "Content NOT FOUND",
-	  "key": "content",
+	  "infomsg": "DATA NOT FOUND",
+	  "key": "data",
 	  "value1": "all",
 	  "value2": "app",
 	  "value3": "info",
 	  "svcName": "Base",
 	  "svcGroup": "Config",
 	  "svcVersion": "1.0.0"
-	}
+	},
+	"Json_filepath": "./data/app_info.json"
 }
