--- a/Task5/Makefile
+++ b/Task5/Makefile
@@ -9,13 +9,12 @@ SRC=$(SRCDIR)/*.cpp
 BIN=$(BINDIR)/httpserver
 CONFIGDIR=config
 CONFIG=$(CONFIGDIR)/configuration.json
-JSON=app_info.json
 
 all:
 	$(COMPILER) $(CPPFLAGS) -o $(BIN) $(SRC) $(INCLUDE) $(LIBS)
 
 run:
-	./$(BIN) $(CONFIGDIR)/$(JSON) $(CONFIG)
+	./$(BIN) $(CONFIG)
 
 remove:
 	rm -f $(BINDIR)/*
